[metadata]
name = trains
author = llamicron
author-email = llamicron@gmail.com
summary = Tracking deficiencies
description-file = README.md
description-content-type = text/x-md; charset=UTF-8
home-page = http://github.com/llamicron/trains
project_urls =
    Documentation = https://github.com/llamicron/trains/blob/master/docs/index.md
    Source Code = http://github.com/llamicron/trains
license = MIT
classifier =
    Development Status :: 1 - Planning
    # Development Status :: 2 - Pre-Alpha
    # Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    # Development Status :: 6 - Mature
    # Development Status :: 7 - Inactive
    # Environment :: Console
    # Intended Audience :: Developers
    # Intended Audience :: Information Technology
    # Operating System :: OS Independent
    Programming Language :: Python
[files]
packages =
    trains

[entry_points]
console_scripts =
    trains = trains.__init__:main
